--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Hackbit/nko2017-bytewalker.git"
@@ -16,5 +13,31 @@
   "bugs": {
     "url": "https://github.com/Hackbit/nko2017-bytewalker/issues"
   },
-  "homepage": "https://github.com/Hackbit/nko2017-bytewalker#readme"
+  "homepage": "https://github.com/Hackbit/nko2017-bytewalker#readme",
+  "dependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-1": "^6.24.1",
+    "css-loader": "^0.28.7",
+    "material-ui": "^1.0.0-beta.20",
+    "react": "^16.1.0",
+    "react-dom": "^16.1.0",
+    "react-redux": "^5.0.6",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
+    "style-loader": "^0.19.0",
+    "url-loader": "^0.6.2",
+    "webpack": "^3.8.1",
+    "webpack-dev-server": "^2.9.4"
+  },
+  "scripts": {
+    "start": "webpack-dev-server -d --config webpack.config.js --content-base public/ --progress --colors"
+  },
+  "devDependencies": {
+    "redux-logger": "^3.0.6"
+  }
 }
