--- a/package.json
+++ b/package.json
@@ -15,13 +15,20 @@
   },
   "homepage": "https://github.com/Hackbit/nko2017-bytewalker#readme",
   "dependencies": {
+    "axios": "^0.17.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
+    "body-parser": "^1.18.2",
     "css-loader": "^0.28.7",
+    "express": "^4.16.2",
+    "foreman": "^2.0.0",
+    "marked": "^0.3.6",
     "material-ui": "^1.0.0-beta.20",
+    "mongoose": "^4.13.1",
+    "nodemon": "^1.12.1",
     "react": "^16.1.0",
     "react-dom": "^16.1.0",
     "react-redux": "^5.0.6",
@@ -35,7 +42,8 @@
     "webpack-dev-server": "^2.9.4"
   },
   "scripts": {
-    "start": "webpack-dev-server -d --config webpack.config.js --content-base public/ --progress --colors"
+    "start": "webpack-dev-server -d --config webpack.config.js --content-base public/ --progress --colors",
+    "start-dev": "nf start -p 3000"
   },
   "devDependencies": {
     "redux-logger": "^3.0.6"
