--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "style-loader": "^0.19.0",
     "url-loader": "^0.6.2",
@@ -44,8 +45,5 @@
   "scripts": {
     "start": "webpack-dev-server -d --config webpack.config.js --content-base public/ --progress --colors",
     "start-dev": "nf start -p 3000"
-  },
-  "devDependencies": {
-    "redux-logger": "^3.0.6"
   }
 }
